[JBWS-1172] Support schema validation for incoming/outgoing messages
git-svn-id: https://anonsvn.jboss.org/repos/jbossws/stack/native/trunk@5873 50344849-fb0f-0410-a53f-a94597aac05c